--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : thunkli
+title : leibnizli
 tagline: Site Tagline
 author :
-  name : thunkli
-  email : thunkli@qq.com
-  github : thunkli
+  name : leibnizli
+  email : leibnizli@qq.com
+  github : leibnizli
   twitter : username
   feedburner : feedname
 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://thunkli.github.io
+production_url : https://leibnizli.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
